# vetche-2d

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.tmp  Cargo.toml  Playdate.cmake  Program.cs  README.md  conanfile.txt  vetche-2d.csproj  vetche-2d.sln
Engine/: Entity.cs  World.cs
Engine/Math/: Vec2.cs
engine/: Cargo.toml
engine/src/: lib.rs
engine_py/: init.py
examples/linux_x11/: CMakeLists.txt
examples/nds/: CMakeLists.txt  build.sh  main.cpp
examples/playdate/: CMakeLists.txt
examples/playdate/Turbo-Trooper.pdx/: pdxinfo
examples/turbo-trooper/: CMakeLists.txt  main.cpp
examples/turbo-trooper-nds/: .gitignore  CMakeLists.txt  build.sh
include/bd/: bd.h
include/bd/core/: core.h  modules.h
include/bd/def/: types.h
include/bd/layer/: layerstack.h
include/bd/memory/: smartptr.h
mun_test_project/: main.mun
python_script_test/: init.py
scripts/linux/: build_debug.sh
scripts/windows/: build_debug.ps1  build_release.ps1
src/: entity.rs  main.cpp  main.rs
src/bd/: bd.cpp  bd.h  core.cpp
src/bd/core/: core.cpp  core.h  modules.h
src/bd/def/: types.h
src/bd/layer/: layerstack.cpp
src/bd/memory/: smartptr.h
src/bd/platform/linux/rendering/: renderer.cpp  renderer.h
src/bd/platform/pd/rendering/: renderer.cpp  renderer.h
src/bd/platform/raylib/rendering/: renderer.cpp  renderer.h
src/bd/platform/raylib/system/: runner.cpp  runner.h
src/vetche/: vetche.cpp  vetche.h
src/vetche/core/: core.cpp  core.h  modules.h
src/vetche/def/: types.h
src/vetche/layer/: layerstack.cpp  layerstack.h
src/vetche/memory/: smartptr.h
src/vetche/platform/pd/: playdate.hpp
src/vetche/platform/pd/rendering/: renderer.cpp  renderer.h
src/vetche/platform/pd/system/: runner.cpp  runner.h
src/vetche/platform/raylib/rendering/: renderer.cpp  renderer.h
src/vetche/platform/raylib/system/: runner.cpp  runner.h
test_scripts/: entity.rhai  main.rhai
vetche_api/: Cargo.toml  README.md
vetche_api/src/: lib.rs
